--- a/src/global.css
+++ b/src/global.css
@@ -14,8 +14,8 @@
   --gray-800: #202024;
   --gray-900: #121214;
 
-  --green-300: #00B37E;
-  --green-500: #00875f;
+  --green-300: #AA00FF;
+  --green-500: #6d00a4;
 
   --red-500: #F75A86;
 }
